Post: 2021-12-17 injectMapper 포스트 게시

--- a/_posts/2021-11-29-optional.md
+++ b/_posts/2021-11-29-optional.md
@@ -112,8 +112,12 @@ public static void main(String[] args) {
 }
 ```
 
----
+<hr class="end-line">
 
+> Github source
+>
+> - [https://github.com/fkdl3010/java-and-spring/tree/main/1_java/optional](https://github.com/fkdl3010/java-and-spring/tree/main/1_java/optional)
+>
 > references
 >
 > - [https://www.daleseo.com/java8-optional-after/](https://www.daleseo.com/java8-optional-after/)
