fix: 2021-12-27 동시성 제어 포스트 수정

--- a/_posts/2021-12-23-병행제어.md
+++ b/_posts/2021-12-23-병행제어.md
@@ -17,7 +17,7 @@ tags: [DataBase]
 
 트랜잭션이 순차적으로, 즉 시간이 겹치지 않고 순차적으로 실행된다면 동시성이 존재하지 않습니다. 하지만 다수의 사용자가 접근하는 DB의 경우 여러 트랜잭션이 하나의 데이터를 삽입, 갱신, 삭제 등의 작업을 동시에 수행하게 될 때 동시성 제어가 적절하게 설계되어있지 않다면 예기치 못한 문제점들이 발생할 수 있습니다.
 
-## **동시성 제어를 하지 않는 경우 문제점**
+## 동시성 제어를 하지 않는 경우 문제점
 
 ---
 
@@ -145,13 +145,13 @@ _모순성(Inconsistency)이라고도 합니다._
 - [교착상태](https://itwiki.kr/w/%EA%B5%90%EC%B0%A9%EC%83%81%ED%83%9C)가 발생하지 않는다.
 - 연쇄복귀(Cascading Rollback)를 초래할 수 있음
 
-### 낙관적 병행제어(Optimistic Concurrency Control)
+### **낙관적 병행제어(Optimistic Concurrency Control)**
 
 - 트랜잭션 수행 동안은 어떠한 검사도 하지 않고, 트랜잭션 종료 시에 일괄적으로 검사
 - 트랜잭션 수행 동안 그 트랜잭션을 위해 유지되는 데이터 항목들의 지역 사본에 대해서만 갱신
 - 트랜잭션 종료 시에 동시성을 위한 트랜잭션 직렬화가 검증되면 일시에 DB로 반영
 
-### 다중 버전 병행제어(Multi-version, Concurrency Control) or ( MVCC )
+### **다중 버전 병행제어(Multi-version, Concurrency Control) or ( MVCC )**
 
 - 여러 버전의 타임스탬프를 비교하여 스케줄상 직렬가능성이 보장되는 타임스탬프를 선택
 - 충돌이 발생할 경우 복귀 수행. 연쇄 복귀 발생 가능성
